--- a/test-front/index.html
+++ b/test-front/index.html
@@ -25,6 +25,11 @@
     <button id="friends">friends</button>
     <div id="friends-info"></div>
 </div>
+
+<div style="border: 1px solid black; padding: 10px">
+    <button id="chats">chats</button>
+    <div id="chats-info"></div>
+</div>
 </body>
 
 <script>
@@ -53,35 +58,46 @@
         })
 
 
-        $("#websocket").click(function (){
+        $("#websocket").click(function () {
             var socket = new SockJS('http://localhost:9000/websocket')
             ws = Stomp.over(socket);
-            ws.connect({}, function(frame) {
-                $("#websocket-state").html(ws.toString() +  frame.toString())
+            ws.connect({}, function (frame) {
+                $("#websocket-state").html(ws.toString() + frame.toString())
 
-                ws.subscribe("/user/queue/errors", function(message) {
+                ws.subscribe("/user/queue/errors", function (message) {
                     $("#websocket-state").html("/user/queue/errors Error " + message.body);
                 }, {'Authorization': token});
 
-            }, function(error) {
+            }, function (error) {
                 $("#websocket-state").html("STOMP error " + error);
             });
         });
 
-        $("#websocket-disconnected").click(function(){
-           ws.disconnect();
+        $("#websocket-disconnected").click(function () {
+            ws.disconnect();
         })
 
 
-        $("#friends").click(function (){
-
-            ws.subscribe("/user/queue/friends", function(message) {
+        $("#friends").click(function () {
+            ws.subscribe("/user/queue/friends", function (message) {
                 console.log(message.body);
             }, {'Authorization': token});
             var data = JSON.stringify({
-                'id' : ""
+                'id': ""
             })
             ws.send("/app/friends", {'Authorization': token}, data);
+        });
+
+        var roomNumber = 1;
+        $("#chats").click(function () {
+            ws.subscribe("/topic/chats/"+roomNumber, function (message) {
+                console.log('chats->', message.body);
+            }, {'Authorization': token});
+
+            var data = JSON.stringify({
+                message:  "chat ~!~!~!" + new Date().toString()
+            });
+            ws.send("/app/chats/"+roomNumber, {'Authorization': token}, data);
         });
     });
 </script>
