자동배포 설정 및 전체적인 코드 정리

--- a/test-front/join.html
+++ b/test-front/join.html
@@ -20,7 +20,7 @@ join
     });
     function connectionSockJs(connected) {
         // var socket = new SockJS('http://127.0.0.1:8080/websocket')
-        var socket = new SockJS('http://localhost:9000/websocket')
+        var socket = new SockJS('http://13.124.86.222:9000/websocket')
         // var socket = new SockJS('websocket')
         var stompClient = Stomp.over(socket);
         stompClient.connect({}, function (frame) {
